# smolstate

./: .gitignore  README.md  __init__.py  __main__.py  checkpoint.py  compare.py  config.py  data.py  embd_sum.py  main.py  model.py  model_utils.py  perturbation_data.py  perturbation_data_old.py  pyproject.toml  ruff.toml  starter.toml  stpert.py  train.py
configs/model/: state_sm.yaml  state_sm_128.yaml
configs/training/: default.yaml  state_default.yaml
scripts/: compare.py
smolstate/: __init__.py  checkpoint.py  config.py  data.py  infer.py  model.py  model_utils.py  perturbation_data.py  train.py
