[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smolstate"
version = "0.1.0"
description = "Minimal reimplementation of state training loop"
authors = [
    {name = "SmolState Team"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geomloss",
    "pyyaml",
    "toml",
    "numpy",
    "pathlib",
    "h5py",
    "tqdm",
    "transformers",
    "torch",
    "anndata",
    "scanpy",
    "lightning",
    "cell-load",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["smolstate*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
